--- a/Anecdotario.tex
+++ b/Anecdotario.tex
@@ -6,6 +6,8 @@
 \usepackage{setspace}
 \usepackage[spanish]{babel}
 \newcommand*{\plogo}{\fbox{\includegraphics[scale=0.5]{MarPerla_logo01}}} 
+\renewcommand{\rmdefault}{phv} % Arial
+\renewcommand{\sfdefault}{phv} % Arial
 %
 %===================================================================================== 
 % Página Frontal
@@ -24,8 +26,8 @@
 \rule{\textwidth}{1.6pt}\\[\baselineskip] % Thick horizontal line
 
 \scshape % Small caps
-\Large Vivencias de una asistente\\ % Tagline(s) or further description
-de veterinario. \\[\baselineskip] % Tagline(s) or further description
+{\calligra{}\Large Vivencias de una asistente\\ % Tagline(s) or further description
+de veterinario.} \\[\baselineskip] % Tagline(s) or further description
 León Guanajuato, México. \\  MMXV \par % Location and year
 
 \vspace*{2\baselineskip} % Whitespace between location/year and editors
