--- a/Anecdotario.tex
+++ b/Anecdotario.tex
@@ -56,8 +56,7 @@ Vivía en un departamento diminuto, de manera que las palomas estaban libres en 
 
 Estas palomas fueron su mayor preocupación a los quince años, cuando tuvo que emigrar del D.F. a León. Tuvo que elegir sólo las que estaban empollando; las empacó en huacales de jitomates, a los que laboriosamente dividió en compartimientos, poniendo a todos los machos juntos en el cajon inferior, cada hembra en un compartimiento, y finalmente formando dos atados con el conjunto.
 
-Volviendo al  abuelo, nos contaba mi suegra que él tenía varios animales, entre ellos un loro que nunca vio volar, y un perro que siempre estaba al lado de él. El día en que murió el abuelo y lo llevaban al panteón, también iba el loro ¡VOLANDO!, y el perro también iba como siempre al lado de su amo. Al loro no lo volvieron a ver, y el perro se echó sobre la tumba, y por más que hicieron por llevárselo, él se quedó ahí. 
-
+      Volviendo al  abuelo, nos contaba mi suegra que él tenía varios animales, entre ellos un loro que nunca vio volar, y un perro que siempre estaba al lado de él. El día en que murió el abuelo y lo llevaban al panteón, también iba el loro ¡VOLANDO!, y el perro también iba como siempre al lado de su amo. Al loro no lo volvieron a ver, y el perro se echó sobre la tumba, y por más que hicieron por llevárselo, él se quedó ahí. 
 Además de la vocación, mi esposo heredó relojes de pared, radios, lámparas etc., ya que estaban abandonados en una bodega, y eran solo cosas viejas que a nadie interesaban; pero cuando nos casamos, mi gordo les dio nueva vida, y como a ambos nos gustan las antigüedades, las conservamos aún, después de 45 años de casados.
 
 \section*{\centering * * *}
@@ -108,6 +107,8 @@ Lunes 10 de abril, salimos del laboratorio de Química en el 3er.\ piso con el i
 Salimos de la escuela y con toda naturalidad me pasa un brazo por los hombros y me besa en la mejilla. Siento que me deshago, me percibo torpe para caminar, no puedo articular palabra, me aturde el roce y el aroma de ese cuerpo joven y masculino.
 
 Me acompaña hasta la esquina de mi casa, que está muy cerca, llego y me voy a mi recámara, para que nadie vea mi agitación.
+
+Mi novio tiene dos nombres, y desde el primer día decido llamarlo \textit{Tony}.
 
 Nos vamos conociendo y me siento más y más enamorada; el carácter de este joven alegre, desinhibido, sociable y capaz de todo lo que se propone, me abre la puerta a un mundo hermoso, donde siempre reímos, y del cual yo no quiero salir.
 
